# cside-event-tracker

./: Cargo.toml  README.md  test.md
.github/workflows/: ci.yaml
src/: event.rs  main.rs  server.rs
src/server/: app_error.rs  handlers.rs  mod.rs
src/storage/: in_memory_storage.rs  mod.rs
