[package]
name = "cside-event-tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }


[profile.dev-nowarn]
inherits = "dev"