[package]
name = "cside-event-tracking"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ahash = "0.8"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "2"
strum = { version = "0.26", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
nu-ansi-term = "*"

[dev-dependencies]
axum-test = "17.3"

[profile.dev-nowarn]
inherits = "dev"